tests/min_chart_version/manifests/authorizationpolicy-without-chart-version.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authorizationpolicy-without-chart-version
  namespace: check-kyverno
spec:
  selector:
    matchLabels:
      app: service1
  action: ALLOW
  rules:
  - from:
    - source:
        notNamespaces: ["bookinfo"]
    when:
    - key: request.headers[authority]
      values: ["service1.default.svc.cluster.local"]
