tests/min_chart_version/manifests/job-with-chart-version.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: job-with-chart-version
  namespace: check-kyverno
  annotations:
    chart: mychart-3.0.21
spec:
  template:
    spec:
      containers:
      - name: job-container
        image: busybox
        command: ["echo", "Hello from the Job"]
